@@ -9,6 +9,7 @@ examples/create_and_print_value_quantity_translated.pl
 examples/create_and_print_value_string.pl
 examples/create_and_print_value_time.pl
 examples/create_and_print_value_time_translated.pl
+examples/utils_print_aliases.pl
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
 inc/Module/Install/AuthorTests.pm
